# neon-rain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  flake.nix  package.nix
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  linux-bundle.yml
config/: neon-rain.conf
deploy/: README.md  doctor.sh  install-user.sh  neon-rain.desktop.in  uninstall-user.sh
docs/: CAPTURE.md  CONFIGURATION.md  DEPLOYMENT.md  GENERIC_LINUX.md  PORTABILITY.md  REFERENCE.md  SCENES.md
docs/assets/: README.md
docs/releases/: v0.1.0-alpha.1.md  v0.1.0-alpha.2.md  v0.1.0-alpha.3.md
packaging/linux/: neon-rain.desktop
scripts/: capture-neon-rain.sh  check-fast.sh  check-release.sh  package-linux-tarball.sh
src/: atlas.rs  bloom.rs  bloom.wgsl  help_overlay.rs  main.rs  main.rs.bak  main.rs.before-depth  main.rs.pre-persistent-streams  music.rs  resilience.rs  settings.rs  shader.wgsl  signal_inspector.rs  simulation.rs  simulation.rs.before-depth  status_overlay.rs
