[package]
name = "neon-rain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytemuck = { version = "1.25.1", features = ["derive"] }
env_logger = "0.11"
fontdue = "0.9.3"
glyphon = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
log = "0.4"
pollster = "0.4"
wgpu = "30"
winit = "0.30"
